# iteag

./: .gitignore
src/: .env.example  Dockerfile  Dockerfile.prod  cahier_de_charge_v2.md  conftest.py  docker-compose.yml  manage.py  package.json  prompt.md  pyproject.toml  ressources.md
src/.github/workflows/: ci.yml
src/.plan/task/: audit_cdc_v1.md  plan.md  standard.md
src/apps/academics/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/apps/accounts/: admin.py  forms.py  models.py  test_views.py  tests.py  urls.py  views.py
src/apps/admissions/: admin.py  apps.py  emails.py  forms.py  models.py  tests.py  urls.py  views.py
src/apps/core/: admin.py  context_processors.py  forms.py  mixins.py  models.py  test_admin_exports.py  tests.py  urls.py  views.py
src/apps/documents/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/formations/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/apps/lms/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/website/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
src/config/: celery.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py  test.py
src/requirements/: base.txt  dev.txt  prod.txt
src/static/fonts/: fonts.css
src/static/img/: .gitkeep
src/static/js/: .gitkeep  iteag.js
src/templates/: base.html  robots.txt
src/templates/academics/: _nav_item.html  courses.html  dashboard.html  grades.html  progress.html
src/templates/accounts/: login.html  password_reset.html  password_reset_complete.html  (+4 more)
(+67 files in other folders)
