[project]
name = "iteag"
version = "1.0.0"
description = "Plateforme académique et institutionnelle de l'ITEAG — Django / Wagtail"
requires-python = ">=3.12"
license = {text = "Proprietary — Trait d'Union Studio"}
authors = [
    {name = "Beaudelaire VILME", email = "contact@traitdunion.it"},
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps", "config"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "DJ"]
ignore = ["S101", "DJ001"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q --no-header"
filterwarnings = [
    "ignore::DeprecationWarning",
]
